<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/addlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addlabel"
        android:textStyle="bold"
        android:textSize="18dp" />
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addlabel"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/addlabel"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/ratelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addlabel"
        android:text="@string/ratelabel"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ratelabel"
        android:layout_toRightOf="@+id/ratelabel"
        android:layout_below="@+id/address"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/typelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratelabel"
        android:text="@string/typelabel"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/typelabel"
        android:layout_toRightOf="@+id/typelabel"
        android:layout_below="@+id/rate"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/caplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typelabel"
        android:text="@string/caplabel"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/caplabel"
        android:layout_toRightOf="@+id/caplabel"
        android:layout_below="@+id/type"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/oplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caplabel"
        android:text="@string/oplabel"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oplabel"
        android:textSize="16dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:id = "@+id/fragView">
    </LinearLayout>


</RelativeLayout>